# BattleShipTerminalGame

BattleShip/: README.txt
BattleShip/BattleShipTerminal/: CMakeLists.txt  main.cpp
BattleShip/BattleShipTerminal in C/: CMakeLists.txt  main.c
